Sutter Health/src/objects/SOC_Queue__c.object
<CustomObject>
    <fields>
        <fullName>Associated_Case_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Case Id</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>SOC Queues</relationshipLabel>
        <relationshipName>SOC_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associated_Case_Id_formula__c</fullName>
        <formula>HYPERLINK(&quot;javascript:if(typeof(srcUp)==&apos;function&apos;) {srcUp(&apos;/apex/SOCCaseDetail?isdtp=vw&amp;caseId=&quot;+ Associated_Case_Id__c+&quot;&apos; );}&quot;,Associated_Case_Id__r.CaseNumber, &quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Associated Case Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <formula>Associated_Case_Id__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <formula>TEXT(Associated_Case_Id__r.Status)</formula>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Subject__c</fullName>
        <formula>Associated_Case_Id__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Imported_Into_Salesforce__c</fullName>
        <label>Date Imported Into Salesforce</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_SOC_Documents_Returned__c</fullName>
        <label>Date SOC Documents Returned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_SOC_Documents_Sent__c</fullName>
        <label>Date SOC Documents Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Escalated_To__c</fullName>
        <label>Escalated To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Supervisor</fullName>
                </value>
                <value>
                    <fullName>MeaningfulUse</fullName>
                </value>
                <value>
                    <fullName>MU Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facility_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility Id</label>
        <referenceTo>PDV_EAF_Facility__c</referenceTo>
        <relationshipLabel>SOC Queues</relationshipLabel>
        <relationshipName>SOC_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Printed_Id__c</fullName>
        <description>Field to contain associated and printed Address Record Id(Provider Summary or EAF Facility)</description>
        <label>Printed Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Facility_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider ID</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SOC Queues</relationshipLabel>
        <relationshipName>SOC_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Returned_Status__c</fullName>
        <label>Returned Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mail Returned – Envelope Not Opened</fullName>
                </value>
                <value>
                    <fullName>Mail Returned – Envelope Opened</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Queue</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Cannot Send</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Provider__c</fullName>
        <label>Type of Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EAF</fullName>
                </value>
                <value>
                    <fullName>SER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SOC Queue</label>
    <listViews>
        <fullName>Escalated_SOCs</fullName>
        <columns>NAME</columns>
        <columns>Date_Imported_Into_Salesforce__c</columns>
        <columns>Status__c</columns>
        <columns>Date_SOC_Documents_Sent__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Escalated_To__c</field>
            <operation>equals</operation>
            <value>Supervisor</value>
        </filters>
        <label>Escalated SOCs</label>
        <sharedTo>
            <group>SOC_Supervisors</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Escalated_SOCs_to_Meaningful_Team_Close</fullName>
        <columns>NAME</columns>
        <columns>Provider_Facility_ID__c</columns>
        <columns>Facility_Id__c</columns>
        <columns>Date_Imported_Into_Salesforce__c</columns>
        <columns>Associated_Case_Id_formula__c</columns>
        <columns>Status__c</columns>
        <columns>Date_SOC_Documents_Sent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Escalated_To__c</field>
            <operation>equals</operation>
            <value>MU Closed</value>
        </filters>
        <label>Escalated SOCs to Meaningful Team(Close)</label>
        <sharedTo>
            <group>MU_Agent</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Escalated_SOCs_to_Meaningful_Team_Open</fullName>
        <columns>NAME</columns>
        <columns>Provider_Facility_ID__c</columns>
        <columns>Facility_Id__c</columns>
        <columns>Date_Imported_Into_Salesforce__c</columns>
        <columns>Status__c</columns>
        <columns>Date_SOC_Documents_Sent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Escalated_To__c</field>
            <operation>equals</operation>
            <value>MeaningfulUse</value>
        </filters>
        <label>Escalated SOCs to Meaningful Team(Open)</label>
        <sharedTo>
            <group>MU_Agent</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_SOC_Records_Escalated</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Case_Number__c</columns>
        <columns>Case_Status__c</columns>
        <columns>Case_Subject__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Escalated</value>
        </filters>
        <label>My SOC Records(Escalated)</label>
    </listViews>
    <listViews>
        <fullName>My_SOC_Records_Open</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Case_Number__c</columns>
        <columns>Case_Status__c</columns>
        <columns>Case_Subject__c</columns>
        <columns>Date_Imported_Into_Salesforce__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </filters>
        <label>My SOC Records(Open)</label>
    </listViews>
    <listViews>
        <fullName>My_SOC_Records_Print</fullName>
        <columns>NAME</columns>
        <columns>Case_Number__c</columns>
        <columns>Case_Status__c</columns>
        <columns>Case_Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Imported_Into_Salesforce__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Print</value>
        </filters>
        <label>My SOC Records(Print)</label>
    </listViews>
    <listViews>
        <fullName>My_SOC_Records_Sent</fullName>
        <columns>NAME</columns>
        <columns>Date_Imported_Into_Salesforce__c</columns>
        <columns>Status__c</columns>
        <columns>Case_Number__c</columns>
        <columns>Case_Status__c</columns>
        <columns>Case_Subject__c</columns>
        <columns>Date_SOC_Documents_Sent__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Sent</value>
        </filters>
        <label>My SOC Records(Sent)</label>
    </listViews>
    <listViews>
        <fullName>My_Team_Open_Folders</fullName>
        <columns>NAME</columns>
        <columns>Date_Imported_Into_Salesforce__c</columns>
        <columns>Status__c</columns>
        <columns>Case_Number__c</columns>
        <columns>Case_Status__c</columns>
        <columns>Case_Subject__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Escalated,Accepted</value>
        </filters>
        <label>My Team Open Folders</label>
        <sharedTo>
            <role>SOC_Supervisor</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Team_Print_Folders</fullName>
        <columns>NAME</columns>
        <columns>Date_Imported_Into_Salesforce__c</columns>
        <columns>Status__c</columns>
        <columns>Case_Number__c</columns>
        <columns>Case_Status__c</columns>
        <columns>Case_Subject__c</columns>
        <columns>Date_SOC_Documents_Sent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Print</value>
        </filters>
        <label>My Team Print Folders</label>
        <sharedTo>
            <role>SOC_Supervisor</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Summary_of_Care_SOC_Queue</fullName>
        <columns>NAME</columns>
        <columns>Date_Imported_Into_Salesforce__c</columns>
        <columns>Status__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Queue</value>
        </filters>
        <label>Summary of Care</label>
        <queue>Summary_of_Care</queue>
        <sharedTo>
            <group>MU_Agent</group>
            <group>Summary_of_Care_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Dr Name/Provider Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SOC Queues</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Cannot_Edit_SOC_Name</fullName>
        <active>true</active>
        <description>Error when SOC Profile user tries to change SOC Name field from list view</description>
        <errorConditionFormula>AND(
  $Profile.Name = &apos;SOC&apos;,
  NOT(ISNEW()),
  ISCHANGED(Name)
)</errorConditionFormula>
        <errorMessage>You cannot change SOC record Name</errorMessage>
    </validationRules>
</CustomObject>